Set max-width and fix letter-spacing in select

--- a/assets/stylesheets/_modules/_sidebar.scss
+++ b/assets/stylesheets/_modules/_sidebar.scss
@@ -55,4 +55,8 @@
       @extend .sidebar__link--is-active;
     }
   }
+
+  &__version select {
+    letter-spacing: 0;
+  }
 }
